$Id: CHANGES,v 1.252 2004/07/05 15:02:32 stelian Exp $

Changes between versions 0.4b36 and 0.4b37 (released ??????????????)
====================================================================

1.	Added the --enable-staticz configure option which enables
	dump and restore to be linked with static versions of
	libz and libbz2 (and dynamic versions of all other libraries).
	This will make Debian users happy, because libz and libbz2
	were the only needed libraries living in /usr, all the
	others live in /lib. In case of system emergency, it is 
	better not to have to rely on an extra filesystem.
	Thanks to Bdale Garbee <bdale@gag.com> for the suggestion.

2.	Fix compilation on (at least the Linux Debian port to) AMD64.
	(<ext2fs/ext2_types.h> defines some types (__s64 and __u64)
	that are also defined by <linux/types.h> (<asm/types.h>) and 
	they conflict).

3.	Make dump's reading of the dumpdates file a bit more robust,
	preventing dump from crashing when the dumpdates file has
	been modified by hand.

4.	Fixed some offset calculations in dump code which could 
	lead to "bread lseek errors" on large filesystems. Thanks
	to Bruce Lowekamp <lowekamp@users.sourceforge.net> for
	reporting this bug and debugging the issue.

5.	Made dump use the blkid library when searching for devices
	by label or uuid instead of dump's own routines.

Changes between versions 0.4b35 and 0.4b36 (released April 21, 2004)
====================================================================

1.	Fixed dump compilation with old gcc versions. Thanks to
	Mike Castle <dalgoda@users.sourceforge.net> for the patch.

2.	Fixed some warnings (howmany, roundup, powerof2 redefined)
	when compiling against a recent glibc version.

3.	Fixed a bug in restore preventing the read of a dump tape
	written with Solaris 7 ufsdump. Thanks to Patrick Higgins
	<phiggins@transzap.com> for reporting the bug and providing 
	the test case.

4.	Changed dump to enable the creation of volumes of different